<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kylejimer.lapiz.com.easycalc.MainActivity">

    <TextView
        android:layout_width="234dp"
        android:layout_height="46dp"
        android:text="@string/Tv1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:background="#E8EAF6"
        android:gravity="center"
        android:id="@+id/textView"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/Et1"
        android:inputType="number|numberSigned|numberDecimal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="41dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        android:layout_marginEnd="41dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="47dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/Et2"
        android:inputType="number|numberSigned|numberDecimal"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="67dp"
        android:text="@string/add"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        android:layout_marginStart="48dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="60dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="67dp"
        android:text="@string/subtract"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        android:layout_marginStart="3dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toRightOf="@+id/button"
        android:layout_marginLeft="0dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="88dp"
        android:layout_height="67dp"
        android:text="@string/clear"
        tools:layout_constraintRight_creator="1"

        app:layout_constraintLeft_toRightOf="@+id/button2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        tools:layout_constraintBaseline_creator="1"

        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="67dp"
        android:text="@string/multiply"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="67dp"
        android:text="@string/divide"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/button2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="130dp"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="88dp"
        android:layout_height="67dp"
        android:text="@string/exit"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button3"
        android:textSize="30sp"

        tools:layout_editor_absoluteY="317dp" />

</android.support.constraint.ConstraintLayout>
